# EmbarcaTech_Template

./: CMakeLists.txt  README.md
include/core/: my_tasks.h  sensors.h  utils.h
include/display/: ssd1306.h
include/drivers/: button.h  buzzer.h  joystick.h  matrix.h  sdcard.h
include/network/: mqtt_client.h  user_data.h  web_server.h
include/sensors/: aht20.h  bmp280.h  mpu6050.h
lib/FatFs_SPI/: CMakeLists.txt
lib/LWIP/: lwipopts.h  mbedtls_config.h
src/: CMakeLists.txt
src/core/: my_tasks.c  sensors.c  utils.c
src/display/: ssd1306.c
src/drivers/: button.c  buzzer.c  joystick.c  led_rgb.c  matrix.c  sdcard.c
src/network/: mqtt_client.c  web_server.c
src/sensors/: aht20.c  bmp280.c  mpu6050.c
